# coffee-report

./: README.md  data.csv  main.py  pyproject.toml
reports/: __init__.py  base.py  median_coffee.py
services/: csv_reader.py
tests/: test_median_coffee.py
