[project]
name = "coffee-report"
version = "0.1.0"
description = "CSV exam report generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tabulate",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]